# hartree

./: Cargo.toml  LICENSE-APACHE  README.md
crates/hartree/: Cargo.toml
crates/hartree-cli/: Cargo.toml
crates/hartree-cli/src/: main.rs  periodic.rs  ts_flags.rs
crates/hartree-cli/tests/: cli.rs  cli_b3lyp3c.rs  cli_b973c_pbeh3c.rs  cli_cosx.rs  cli_cp.rs  cli_d3.rs  cli_d4.rs  cli_dft.rs  cli_dh_ri_mp2.rs  cli_ext.rs  cli_fod.rs  cli_method_warnings.rs  cli_post_hf.rs  cli_r2scan3c.rs  cli_ri.rs  cli_smear.rs  cli_solvent.rs  opt.rs  ts_output.rs
crates/hartree/benches/: bench_jk.rs  bench_xc.rs  perf_gemm_decomp.rs  perf_pipeline.rs
crates/hartree/src/: composite.rs  cp.rs  estimate.rs  estimate_tests.rs  guardrails.rs  guardrails_tests.rs  job.rs  job_tests.rs  lib.rs  multilevel.rs  periodic_job.rs  sad.rs  surface.rs  surface_tests.rs  w1.rs
crates/hartree/src/basis/: bse.rs  ecp.rs  error.rs  gth.rs  gth_basis.rs  mod.rs
crates/hartree/src/basis/data/basis/: 6-311++g(d,p).json  6-311+g(d,p).json  6-311g(d,p).json  6-311g.json  6-31g(d).json  6-31g.json  PROVENANCE.md  aug-cc-pvtz.json  cc-pvdz.json  cc-pvqz.json  cc-pvtz.json  def2-msvp.json  def2-mtzvp.json  def2-mtzvpp.json  def2-qzvp.json  def2-qzvpp.json  def2-svp-c.json  def2-svp.heavy.json  def2-svp.json  def2-svpd.json  def2-tzvp-c.json  def2-tzvp.heavy.json  def2-tzvp.json  def2-tzvpd.json  def2-tzvpp.json  def2-tzvppd.json  def2-universal-jkfit.json  sto-3g.json
crates/hartree/src/cc/: mod.rs  mp2.rs  ri_mp2.rs  transform.rs
crates/hartree/src/cc/ccsd/: diis.rs  mod.rs  spin_adapted.rs  spin_orbital.rs  triples.rs
crates/hartree/src/core/: element.rs  error.rs  mod.rs  molecule.rs  units.rs
crates/hartree/src/dft/: ao.rs  cosx.rs  density.rs  error.rs  fod.rs  functional.rs  gradient.rs  grid.rs  mod.rs  vv10.rs  xc.rs
crates/hartree/src/dft/ao/: harmonics.rs
crates/hartree/src/dft/grid/: becke.rs  lebedev.rs  radial.rs
crates/hartree/src/disp/: d4.rs  d4data.rs  data.rs  gcp.rs  mod.rs  srb.rs
crates/hartree/src/ext/: PROVENANCE.md  confgen.rs  crest.rs  ensemble.rs  error.rs  kabsch.rs  mod.rs  xtb.rs  xyz.rs
crates/hartree/src/grad/: mod.rs
crates/hartree/src/integrals/: mod.rs
crates/hartree/src/linalg/: mod.rs
crates/hartree/src/opt/: constrained.rs  fd.rs  internals.rs  mod.rs  tests.rs
crates/hartree/src/opt/constrained/: tests.rs
crates/hartree/src/opt/internals/: mod.rs  tests.rs  transform.rs
crates/hartree/src/opt/ts/: climb.rs  dimer.rs  dimer_rotate.rs  frame.rs  guess.rs  internal_frame.rs  irc.rs  mod.rs  neb.rs  numerics.rs  options.rs  prfo.rs  step.rs
crates/hartree/src/periodic/: converged.rs  energy.rs  error.rs  ewald.rs  forces.rs  mod.rs  post.rs  pseudo.rs  scf.rs  stress.rs  system.rs  xc.rs
crates/hartree/src/props/: PROVENANCE.md  dipole.rs  frequencies.rs  hessian.rs  mod.rs  population.rs  sph.rs  thermo.rs
crates/hartree/src/scf/: diis.rs  mod.rs  scf_math.rs  smearing.rs  solvent.rs  x2c.rs  xc.rs
crates/hartree/src/solv/: PROVENANCE.md  cosmo.rs  gbsa.rs  gbsa_params.rs  mod.rs  smd.rs  surface.rs
crates/hartree/src/tensor/: mod.rs
crates/hartree/tests/: b3lyp3c.rs  b973c.rs  cc_ccsd_spin_adapted.rs  cc_ccsd_spin_orbital.rs  cc_ccsd_t.rs  cc_mp2.rs  cc_ri_mp2.rs  cc_t1_diagnostic.rs  cc_transform.rs  conformers.rs  cp.rs  dft_cosx.rs  dft_dft_oracle.rs  dft_fd_vxc.rs  dft_ks_scf.rs  dft_mgga_oracle.rs  dft_ri_ks.rs  dft_rs_v_functionals.rs  dft_s_gate.rs  dft_tau.rs  dft_xc_grad_frozen.rs  disp_composite3c_terms.rs  disp_d3bj_oracle.rs  disp_d4_dh_params.rs  disp_d4_oracle.rs  disp_d4_properties.rs  disp_gcp_fd.rs  disp_gcp_ref.rs  disp_properties.rs  double_hybrid.rs  ecp.rs  estimate.rs  fod.rs  freq_dft.rs  ghost.rs  grad_ecp_gradients.rs  grad_gradients.rs  grad_ks_gradients.rs  grad_ksgrad_oracle.rs  heavy_grid.rs  (+35 more)
crates/hartree/tests/dft_common/: mod.rs
crates/hartree/tests/scf_common/: mod.rs
crates/hartree/tests/solv_common/: mod.rs
tests/ref/: b3lyp3c.json  (+21 more)
(+33 files in other folders)
